@@ -8,12 +8,13 @@ from java.util.concurrent import CountDownLatch
 class AllocateLockTest(unittest.TestCase):
 
     def test_lock_type(self):
-        "thread.LockType should exist"
+        """thread.LockType should exist"""
         t = thread.LockType
         self.assertEquals(t, type(thread.allocate_lock()),
             "thread.LockType has wrong value")
 
 class SynchronizeTest(unittest.TestCase):
+
     def test_make_synchronized(self):
         doneSignal = CountDownLatch(10)
         class SynchedRunnable(Runnable):
@@ -27,6 +28,9 @@ class SynchronizeTest(unittest.TestCase):
             Thread(runner).start()
         doneSignal.await()
         self.assertEquals(10, runner.i)
+
+    def test_synchronized_callable(self):
+        self.assertTrue(callable(synchronize.make_synchronized(lambda: None)))
 
 
 def test_main():
